@@ -37,6 +37,9 @@ li {
 .v-dialog {
   width: 600px;
   max-width: 800px;
+  &.v-dialog--fullscreen {
+    max-width: 100%;
+  }
 }
 
 .theme--dark.v-list {
@@ -116,4 +119,9 @@ li {
   white-space: nowrap;
   overflow: hidden;
   display: block;
+}
+
+
+.cursorPointer {
+  cursor: pointer;
 }
